[tool.poetry]
name = "qmsspkg_DS"
version = "0.1.0"
description = "Python package with basic cypher routines"
authors = ["Donald Stephens"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
